@@ -51,9 +51,9 @@ extern int getdents (int fd, void *dp, int count);
  */
 int
 _DEFUN(readdir_r, (dirp, dp, dpp),
-	register DIR *dirp _AND
-	struct dirent *dp _AND
-	struct dirent **dpp) {
+	register DIR *__restrict dirp _AND
+	struct dirent *__restrict dp _AND
+	struct dirent **__restrict dpp) {
 
 struct dirent *tmpdp;
  
